<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_shopping_bag"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_supply"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/menu_tools" />
    </group>

       <item android:title="More Item">
        <menu>
            <item
                android:id="@+id/nav_share"

                android:icon="@drawable/ic_pie_chart_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_group"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />


    </menu>
       </item>



</menu>
